# test-code_review

./: CONTRIBUTING.md  README.md  SECURITY.md  guidelines_selector.py  post-comments.py  post_comments.py  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: ai-reviewer.yml  code-review  code-review.yml
code_review/: __init__.py  config.py  main.py  stats.py
code_review/cli/: generate_stats.py  post_comments.py
code_review/config/: review_config.json
code_review/github_client/: __init__.py  github_api.py  pr_client.py
code_review/guidelines/: selector.py
code_review/parsers/: review_parser.py
code_review/stats/: review_stats.py
code_review/utils/: config_loader.py
code_review_guidelines/: guidelines.json
scripts/code-review/: main.js
src/code_review/: __init__.py  config.py  emoji_config.py  github.py  main.py  openrouter.py
